--- a/client/style.css
+++ b/client/style.css
@@ -141,7 +141,8 @@ footer {
   height: 100%;
 }
 
-.product img {
+.product img,
+.product-image {
   max-height: 26rem;
   max-width: 22rem;
   margin-top: 2rem;
@@ -179,7 +180,7 @@ footer {
   flex: 2 1 60rem;
 }
 
-.detials-image img {
+.details-image img {
   max-width: 60rem;
   width: 100%;
 }
@@ -193,7 +194,9 @@ footer {
   padding: 0;
   list-style-type: none;
 }
-
+.details-info {
+  margin-left: 1rem;
+}
 .details-info h1 {
   font-size: 2rem;
   margin: 0;
